[package]
name = "moss-model"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.1" }
opencv = { version = "0.97.0", default-features = false, features = ["imgproc", "imgcodecs", "dnn"] }
rayon = "1.10"
num_cpus = "1.17.0"

ort = { version = "2.0.0-rc.10", features = ["ndarray"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "cuda", "directml"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "cuda"] }

[target.'cfg(target_os = "android")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "nnapi"] }